amf-cli/shared/src/test/resources/parser-results/raml/error/invalid-type.raml
#%RAML 1.0
title: test artist and tracks api
types:

  Artist:
    properties:
          Id:
            type: integer
          Name:
    examples:
        one: {
            "Id": 1,
            "Name": "Dave Mathews Band"
          }
        two: {
            "Id": 2,
            "Name": "Pearl Jam"
          }
  Track:
        properties:
          Id:
            type: integer
          Name:
          MediaType:
              properties:
                Id:
                    type: integer
                Name:
          Genre:
              properties:
                Id:
                    type: integer
                Name:
          Composer:
          Milliseconds:
            type: integer
          Bytes:
            type: integer
          UnitPrice:
            type: number
  ArtistByTrack:
      type: object
      properties:
          []:
              type: Artist
  TracksByArtist:
      type: object
      properties:
          []:
              type: Track[]
  AnotherTrack:
      type: object
      properties:
          {}:
            type: string